Details
Description
When setting XDG_RUNTIME_DIR=does_not_exist and then trying to get the runtime location, the error printed is:
QStandardPaths: wrong ownership on runtime directory does_not_exist, -2 instead of 1001
The error is quite confusing - I think the case with the directory not existing should be handled separately before trying to set the ownership.